--- a/style.css
+++ b/style.css
@@ -1,14 +1,44 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
+
+@font-face {
+    font-family: norse;
+    src: url(/fonts/Norse-Bold.otf);
+  }
+
 body{
     margin:0;
     padding:0;
     height:100vh;
     width: 100vw;
     display: flex;
+    font-family: "Rubik",sans-serif;
+}
+
+.image-container{
+    flex-shrink: 0;
+    width: max(280px,40%);
+    background-image: url("https://images.unsplash.com/photo-1585202900225-6d3ac20a6962?q=80&w=1862&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
+    background-size: cover;
+}
+
+.logo-container{
+    height: 150px;
+    background-color: rgba(0,0,0,0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 125px;
 }
 
 img{
-    display: block;
-    width: 40%;
+    display: inline-block;
+    height: 100%;
+}
+
+span{
+    font-family: norse;
+    color:white;
+    font-size: 100px;
 }
 
 .container{
@@ -38,18 +68,22 @@ h2{
 }
 
 .heading-content>h2:last-child{
-    padding-top: 40px;
+    padding-top: 20px;
 
 }
 
 .form-container{
     flex: 0.8 0 0;
+}
 
+.form-border{
+    box-shadow: 0px 15px 10px -15px rgba(17,17,17,0.25);  
 }
 
 .form-content{
     padding-left: 40px;
     width: 80%;
+    padding-bottom: 20px;
 }
 
 .form-content h2{
@@ -117,8 +151,10 @@ button{
     background-color: #596D48;
     color: white;
     font-weight: 700;
+    cursor: pointer;
 }
 
 a{
     text-decoration: none;
+    color:#596D48;
 }
