--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 
 @font-face {
     font-family: norse;
-    src: url('/fonts/Norse-Bold.otf');
+    src: url("../../Sign-up-Form/fonts/Norse-Bold.otf");
   }
 
 body{
